--- a/packages/storybook-html/src/components/form/form-validation.story.mdx
+++ b/packages/storybook-html/src/components/form/form-validation.story.mdx
@@ -40,11 +40,10 @@ form-filling requirements.
 
 #### What should go into an error summary?
 
-| Component element                        | Purpose                                                                                                                                                                                                                    |
-|------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Title                                    | Quickly informs the user of the action that has failed and the state of the form, e.g. "Your form could not be submitted, you have field errors", "An error has occurred on our side—we will not process your submission". |
-| List of inline validation errors present | Read by the user and screen readers for an overview of form errors. Enables the user can skip directly to the inputs that need action. Shouldn't need to appear if there is a server error present.                        |
-| Server errors                            | Show errors returned by the server. Shouldn't need to appear if there are inline validation errors present.                                                                                                                |
+| Component element | Purpose |
+|-------------------|---------|
+| Title | Quickly informs the user of the action that has failed and the state of the form, e.g. "Your form could not be submitted, some form fields need correction". |
+| List of inline validation errors present | Read by the user and screen readers for an overview of form errors. Enables the user to skip directly to the fields that need correction. |
 
 The following example shows insertion of errors when the user tries to submit
 the form without data.
@@ -132,9 +131,19 @@ different types of instantaneously feedback types and usage examples.
 
 | Feedback type | Description | Example usage |
 |---------------|-----------------------------------------------------------------------------------------------------------------------------------------------|--------------------------|
-| Scaled | Communicates validation result on a scaled classification or rating system. See: <a href="/?path=/docs/forms-working-examples--password-form">password form working example</a>. | Password strength meter. |
+| Scaled | Communicates validation result on a scaled classification or rating system. <a href="/?path=/docs/forms-working-examples--password-form">See password form working example</a>. | Password strength meter. |
 | Binary | Communicates true or false validation result. | Username availability. |
 
 ## Implementation for web sites/apps
   
-See: <a href="/?path=/docs/forms-form-errors--error-summary">form errors docs</a>.
+> <a href="/?path=/docs/forms-form-errors--error-summary">See Form errors</a>.
+
+## Other form feedback
+
+### Form submission failure due to server-side or policy errors
+
+> <a href="/?path=/docs/components-alert--error">See Alerts</a> for more information
+
+### Successful form submission feedback
+
+> <a href="/?path=/docs/components-alert--success">See Alerts</a> for more information
