Fixed location of Pagination doc

--- a/packages/storybook-html/src/components/pagination/pagination.story.mdx
+++ b/packages/storybook-html/src/components/pagination/pagination.story.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
-<Meta title="Pagination/Pagination states" />
+<Meta title="Components/Pagination/Pagination states" />
 
 # Pagination
 
