--- a/packages/storybook-html/src/components/page-header/page-header.docs.mdx
+++ b/packages/storybook-html/src/components/page-header/page-header.docs.mdx
@@ -1,12 +1,17 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
-<Meta title="Components/Page Header/All" />
+<Meta title="Components/Page header/All" />
 
-### Page Header
+# Page header
+
+The Page header component is used to display the page title or the breadcrumbs or a combination of both. 
+The default background color is set to light grey to distinguish it from the page contents.
 
 <Preview withToolbar>
   <Story height="300px" id="components-page-header--page-header" />
 </Preview>
+
+### Page header default HTML markup
 
 ```html
 <div class="page__header">  
@@ -17,6 +22,8 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
   </div>
 </div>
 ```
+
+### Page header default + Breadcrumb HTML markup
 
 ```html
 <div class="page__header">  
