page header review amends

--- a/packages/storybook-html/src/components/page-header/page-header.docs.mdx
+++ b/packages/storybook-html/src/components/page-header/page-header.docs.mdx
@@ -11,7 +11,7 @@ The default background color is set to light grey to distinguish it from the pag
   <Story height="300px" id="components-page-header--page-header" />
 </Preview>
 
-### Page header default HTML markup
+### Page header default
 
 ```html
 <div class="page__header">  
@@ -23,7 +23,7 @@ The default background color is set to light grey to distinguish it from the pag
 </div>
 ```
 
-### Page header default + Breadcrumb HTML markup
+### Page header default + Breadcrumb
 
 ```html
 <div class="page__header">  
