added initial doco

--- a/packages/storybook-html/src/components/header/header.story.mdx
+++ b/packages/storybook-html/src/components/header/header.story.mdx
@@ -4,4 +4,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 # Header
 
-Lorem
+The global UQ header provides a consistent branding and navigational element across all UQ pages. Reinforced by the logo, the header enables users to quickly identify UQ websites and promotes trust.
+
+
+
