updates to private design output

--- a/packages/storybook-html/src/components/main-navigation/main-navigation.docs.mdx
+++ b/packages/storybook-html/src/components/main-navigation/main-navigation.docs.mdx
@@ -34,6 +34,7 @@ The site title component includes the repsonsive open/close menu button on small
 Requires the Site Title component for the Responsive menu botton.
 
 ```html
+<div class="main-navigation section section--no-spacing">
   <div id="block-mainnavigation" class="block block-system block-system-menu-blockmain">
     <div data-gtm-category="Main navigation">
       <div class="section__content">
@@ -65,4 +66,5 @@ Requires the Site Title component for the Responsive menu botton.
       </div>
     </div>
   </div>
+</div>
 ```
