--- a/packages/storybook-html/src/components/main-navigation/main-navigation.docs.mdx
+++ b/packages/storybook-html/src/components/main-navigation/main-navigation.docs.mdx
@@ -38,7 +38,7 @@ A simple one level menu list
       <div class="section__content">
         <nav class="nav nav--dropdown processed" id="primary-nav">
           <ul class="nav__level-1 nav--open" aria-expanded="true">
-              <li>
+              <li class="active">
               <a href="/" title="Home">Home</a>
             </li>
             <li>
@@ -90,7 +90,7 @@ Requires the Site Title component for the Responsive menu botton.
       <div class="section__content">
         <nav class="nav nav--dropdown processed" id="primary-nav">
           <ul class="nav__level-1 nav--open" aria-expanded="true">
-              <li>
+              <li class="active">
               <a href="/" title="Home" aria-expanded="false">Home</a>
             </li>
             <li class="nav__has-subnav">
