add secondary actions to documentation,

--- a/packages/storybook-html/src/components/main-navigation/main-navigation.docs.mdx
+++ b/packages/storybook-html/src/components/main-navigation/main-navigation.docs.mdx
@@ -119,6 +119,18 @@ Requires the Site Title component for the Responsive menu botton.
 </div>
 ```
 
+## Secondary Actions
+
+The Site title section includes a small space for secondary actions. `header__secondary__actions`
+
+This is not an advertising or spam section, but intended for discrete, site wide functionality. 
+
+**Examples include:** 
+
+* Future Students dropdown for domestic and international.
+* UQ Maps, expand to fill whole screen
+* UQ researchers shortlist
+
 ## Break points
 
 * Desktop above 1140px
