Prefixed with 'uq-'

--- a/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
+++ b/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
@@ -19,13 +19,13 @@ An instance when only the next button is visible
 </Preview>
 
 ```html
-  <div class="previous-next">
-    <div class="previous-next__item previous-next__item--hidden">
-      <a href="#" class="previous-next__link-previous">Enrolment basics <span class="previous-next__description">Previous</span></a>
+  <div class="uq-previous-next">
+    <div class="uq-previous-next__item uq-previous-next__item--hidden">
+      <a href="#" class="uq-previous-next__link-previous">Enrolment basics <span class="uq-previous-next__description">Previous</span></a>
     </div>
 
-    <div class="previous-next__item">
-      <a href="#" class="previous-next__link-next">How to enrol <span class="previous-next__description">Next</span></a>
+    <div class="uq-previous-next__item">
+      <a href="#" class="uq-previous-next__link-next">How to enrol <span class="uq-previous-next__description">Next</span></a>
     </div>
   </div>
 ```
@@ -40,13 +40,13 @@ An instance when both the previous and next buttons are visible
 
 ```html
 <!-- Previous and Next buttons are visible -->  
-<div class="previous-next">
-    <div class="previous-next__item">
-        <a href="#" class="previous-next__link-previous">Enrolment basics <span class="previous-next__description">Previous</span></a>
+<div class="uq-previous-next">
+    <div class="uq-previous-next__item">
+        <a href="#" class="uq-previous-next__link-previous">Enrolment basics <span class="uq-previous-next__description">Previous</span></a>
     </div>
 
-    <div class="previous-next__item">
-        <a href="#" class="previous-next__link-next">How to enrol <span class="previous-next__description">Next</span></a>
+    <div class="uq-previous-next__item">
+        <a href="#" class="uq-previous-next__link-next">How to enrol <span class="uq-previous-next__description">Next</span></a>
     </div>
 </div>
 ```
@@ -60,13 +60,13 @@ An instance when only the previous button is visible
 </Preview>
 
 ```html
-  <div class="previous-next">
-    <div class="previous-next__item">
-      <a href="#" class="previous-next__link-previous">Enrolment basics <span class="previous-next__description">Previous</span></a>
+  <div class="uq-previous-next">
+    <div class="uq-previous-next__item">
+      <a href="#" class="uq-previous-next__link-previous">Enrolment basics <span class="uq-previous-next__description">Previous</span></a>
     </div>
 
-    <div class="previous-next__item previous-next__item--hidden">
-      <a href="#" class="previous-next__link-next">How to enrol <span class="previous-next__description">Next</span></a>
+    <div class="uq-previous-next__item uq-previous-next__item--hidden">
+      <a href="#" class="uq-previous-next__link-next">How to enrol <span class="uq-previous-next__description">Next</span></a>
     </div>
   </div>
 ```
