--- a/packages/storybook-html/src/components/site-header/site-header.docs.mdx
+++ b/packages/storybook-html/src/components/site-header/site-header.docs.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
-# Main Navigation
+# Site header
 
 ## Overview
 
@@ -11,28 +11,24 @@ The main navigation component is designed to work closely with the header, site 
 A simple one level menu list
 
 <Preview withToolbar>
-  <Story height="350px" id="components-main-navigation--basic-navigation" />
+  <Story height="350px" id="components-site-header--site-header" />
 </Preview>
 
 ## with Dropdown
-
-<Preview withToolbar>
-  <Story height="350px" id="components-main-navigation--dropdown-navigation" />
-</Preview>
 
 ### Site title
 
 The site title component includes the repsonsive open/close menu button on smaller devices
 
-### Main Navigation
+### Site navigation
 
 Requires the Site Title component for the Responsive menu botton.
 
-## Secondary Actions
+## Site utility
 
-The Site title section includes a small space for secondary actions. `header__secondary__actions`
+The Site title section includes a small space for secondary actions. `uq-site-header__navigation-header__actions`
 
-This is not an advertising or spam section, but intended for discrete, site wide functionality. 
+This is not an advertising or spam section, but intended for discrete, site wide functionality.
 
 **Examples include:** 
 
