--- a/packages/storybook-html/src/components/progression/progression.docs.mdx
+++ b/packages/storybook-html/src/components/progression/progression.docs.mdx
@@ -136,4 +136,4 @@ The instance when all steps are done and completed.
 
 ## Breakpoints
 
-The progression hides step markers like the number and label at viewports less than 640px.
+The progression hides the step marker label at viewports less than 640px.
