storybook-html: make `body` doc more clear

--- a/packages/storybook-html/src/components/body/body.story.mdx
+++ b/packages/storybook-html/src/components/body/body.story.mdx
@@ -49,10 +49,10 @@ package stylesheet to a subset of elements. For example:
   ...
 ```
 
-You can also apply the `uq` class to the `<body>` tag (if your objective is to
-add more [specificity](https://developer.mozilla.org/en-US/docs/Web/CSS/Specificity)
-to the package styles) to apply the stylesheet globally. Otherwise, by default,
-this stylesheet will effect the `body` tag and its descendants globally anyway.
+You can also apply the `uq` class to the `<body>` tag to use the styles globally
+(e.g. to add more [specificity](https://developer.mozilla.org/en-US/docs/Web/CSS/Specificity)
+to the resulting CSS). Otherwise, by default, this stylesheet will effect the
+`body` tag and its descendants globally anyway.
 
 ```html
 <body class="uq">
